# pylibnmea2k

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pylibnmea2k/: __init__.py
tests/: test_pylibnmea2k.py
