[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylibnmea2k"
version = "0.2.0"
description = "Minimal, fast NMEA 2000 single-frame PGN decoder"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["nmea2000", "n2k", "marine", "sailing", "can", "pgn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Networking",
]

[project.urls]
Repository = "https://github.com/ghotihook/pylibnmea2k"

[tool.hatch.build.targets.wheel]
packages = ["pylibnmea2k"]
